--- a/css/style.scss
+++ b/css/style.scss
@@ -38,7 +38,7 @@ body{
 
         }
         &:hover,&.class{
-            background: red;
+            background: green;
         }
     }
     div{
