--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
     body h1:hover {
       color: #000; }
   body div:hover, body div.class {
-    background: red; }
+    background: green; }
   body div {
     background-color: #704529; }
     body div .foo {
