--- a/css/style.scss
+++ b/css/style.scss
@@ -38,7 +38,7 @@ body{
 
         }
         &:hover,&.class{
-            background: green;
+            background: red;
         }
     }
     div{
@@ -54,7 +54,7 @@ body{
     }
     p{
         font:{
-            size: 1.2em;
+            size: 1.7em;
             weight: bold;
             family: serif;
         }
