--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab:100,200,300,400,500,600,700,800,900|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap");
 body {
+  font-family: "Roboto";
   background: #efefef;
-  color: #657428 !important; }
+  color: #657429 !important; }
   body a {
     color: red;
     font-size: 2em;
@@ -14,6 +16,12 @@ body {
     font-size: 1.5em; }
     body #masection a:hover {
       color: goldenrod; }
+  body h1, body h2, body h3, body h4 {
+    font-family: "Roboto Condensed"; }
+  body blockquote {
+    font-family: "Roboto Mono"; }
+  body em, body strong {
+    font-family: "Roboto Slab"; }
   body h1 {
     color: #999;
     transition: all 1s ease; }
@@ -30,7 +38,7 @@ body {
         color: bisque;
         background-color: yellow; }
   body p {
-    font-size: 1.7em;
+    font-size: 1.2em;
     font-weight: bold;
     font-family: serif; }
 
