--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,23 @@
-$couleur-principal: #657428;
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab:100,200,300,400,500,600,700,800,900|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
+
+
+$police-principale: 'Roboto';
+$police-titre: 'Roboto Condensed';
+$police-secondaire: 'Roboto Slab';
+$police-mono: 'Roboto Mono';
+$pp:$police-principale;
+$pt:$police-titre;
+$ps:$police-secondaire;
+$pm:$police-mono;
+
+
+$couleur-principal: #657429;
 $couleur-secondaire: #704529;
 $cp: $couleur-principal;
 $cs: $couleur-secondaire;
 
 body{
+    font-family: $pp;
     background: #efefef;
     color: $cp !important;
     a{
@@ -13,7 +27,7 @@ body{
         &:hover{
             color: purple;
         }
-        &.lienautre {
+        &.lienautre{
             font-size: 1.7em;
         }
     }
@@ -26,6 +40,15 @@ body{
             }
         }
     }
+    h1,h2,h3,h4{
+        font-family: $pt;
+    }
+    blockquote{
+        font-family: $pm;
+    }
+    em,strong{
+        font-family: $ps;
+    }
     h1{
         color: #999;
         transition: all 1s ease;
@@ -35,7 +58,7 @@ body{
     }
     div{
         a{
-
+            
         }
         &:hover,&.class{
             background: red;
@@ -54,7 +77,7 @@ body{
     }
     p{
         font:{
-            size: 1.7em;
+            size: 1.2em;
             weight: bold;
             family: serif;
         }
