--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
     color: #999;
     transition: all 1s ease; }
     body h1:hover {
-      color: #000; }
+      color: red; }
   body div:hover, body div.class {
     background: red; }
   body div {
