--- a/css/style.scss
+++ b/css/style.scss
@@ -53,7 +53,7 @@ body{
         color: #999;
         transition: all 1s ease;
         &:hover{
-            color: #000;
+            color: red;
         }
     }
     div{
