--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab:100,200,300,400,500,600,700,800,900|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap");
+.block-error, .block-valid, .block-warning, .block-info {
+  border: 1px solid black;
+  border-radius: 20px 0;
+  padding: .5em;
+  font-weight: bold;
+  font-family: "Roboto Mono";
+  color: #fff; }
+
+.block-error {
+  background-color: red; }
+.block-valid {
+  background-color: green; }
+.block-warning {
+  background-color: orange; }
+.block-info {
+  background-color: blue; }
+
 body {
   font-family: "Roboto";
   background: #efefef;
