--- a/css/style.scss
+++ b/css/style.scss
@@ -16,6 +16,35 @@ $couleur-secondaire: #704529;
 $cp: $couleur-principal;
 $cs: $couleur-secondaire;
 
+%monplaceholder{
+    border:1px solid rgba(0,0,0,05);
+    border-radius: 20px 0;
+    padding: .5em;
+    font:{
+        weight: bold;
+        family:$pm;
+    }
+    color:#fff;
+}
+.block{
+    &-error{
+        @extend %monplaceholder;
+        background-color: red;
+    }
+    &-valid{
+        @extend %monplaceholder;
+        background-color: green;
+    }
+    &-warning{
+        @extend %monplaceholder;
+        background-color: orange;
+    }
+    &-info{
+        @extend %monplaceholder;
+        background-color: blue;
+    }
+}
+
 body{
     font-family: $pp;
     background: #efefef;
