--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
   padding: .5em;
   font-weight: bold;
   font-family: "Roboto Mono";
-  color: #fff; }
+  color: #fff;
+  margin: 5px; }
 
 .block-error {
   background-color: red; }
