--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,10 @@ $cs: $couleur-secondaire;
     }
     color:#fff;
     margin: 5px;
+    opacity: .7;
+    &:hover{
+        opacity: 1;
+    }
 }
 .block{
     &-error{
