--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab:100,200,300,400,500,600,700,800,900|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
 
+$tablet-width: 768px;
+$desktop-width: 992px;
+
+@mixin mobile{
+    @media (max-width: #{$tablet-width - 1px}) {
+   @content;
+ }
+}
 
 $police-principale: 'Roboto';
 $police-titre: 'Roboto Condensed';
@@ -97,7 +105,10 @@ body{
         color: #999;
         transition: all 1s ease;
         &:hover{
-            color: red;
+            color: #000;
+        }
+        @include mobile{
+            color: #123456;
         }
     }
     div{
@@ -135,8 +146,9 @@ body{
 
 
 
-$tablet-width: 768px;
-$desktop-width: 992px;
+
+
+
 
 @mixin tablet {
   @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
